Revision history for Ocsinventory::Agent

2.2
       * Correction for usb inventory
       * Retrieve Docker container informations
       * Update memconf command to last revision
       * Add enhancement support for Xen xl command (xm command already present)

2.2rc1
       * Update memconf command to last revision
       * Fix Bug #1466748 Interface Detection Infiniband MAC wrong
       * Fix Bug #1423905 Failed HTTP auth if password contains # character
       * Fix syntax error in BSDpkg.pm file
       * HPUX/Solaris: use --nosoftware instead of --nosoft
       * Correction of graphics resolution
       * Retrieve speed and duplex from a different way
       * Enhancement: unix agent can now report battery inventory
       * Enhancement: unified agent can retrieve lxc container
       * Suppress --nosoft option
       * Fix Bug #1440626 Typo error in Alpha/CPU.pm
       * Fix Bug #1438719 pkg_list has been deprecated on FreeBSD so no software inventory is gathered on those systems
       * Fix Bug #1438021 Support s390x processors
       * Fix Bug #1436702 Wrong disk size
       * Fix Bug #1435675 AIX typo error in Hardware.pm
       * Fix Bug #1431844 données de HDD SAS/SAN manquantes AIX 5.3, 6.1 et 7.1
       * Fix Bug #1420073 Linux/Archs/i386/CPU.pm reports incorrect CPU information
       * Fix Bug #1409671 PROCESSORS bad value on PowerPC arch
       * Fix Bug #1405167 Presentation of OS Name and OS Version
       * Fix Bug #1389255 Nombre d'interfaces recherchees
       * Fix Bug #1376787 [UNIX Agent] Feature request: report Fusion-io cards
       * Fix Bug #1364123 created script perl for xenserver
       * Fix Bug #1350240 --nosoftware does'nt work on aix
       * Fix Bug #1342038 Wrong data for cores on Unix Agent 2.1.1
       * Fix Bug #1322088 CPU show 0 on VM libvirt
       * Fix Bug #1319683 libvirt VM partial detection
       * Fix Bug #1293588 CPU on Ubuntu may not be detected because of `arch` command and Dumper reference