@@ -2,10 +2,10 @@ package Ocsinventory::Agent::Backend::OS::Linux::Distro::NonLSB::CentOS;
 use strict;
 
 sub check {
-    -f "/etc/redhat-release"
-      &&
-    !readlink ("/etc/redhat-release")
-      &&
+    -f "/etc/centos-release"
+      &&  
+    !readlink ("/etc/centos-release")
+      &&  
     !-f "/etc/vmware-release"
 }
 
@@ -13,7 +13,7 @@ sub check {
 sub findRelease {
     my $v;
 
-    open V, "</etc/redhat-release" or warn;
+    open V, "</etc/centos-release" or warn;
     chomp ($v=<V>);
     close V;
     $v;
